[UI] fetch repo ui enhance ,scrollbar fixed , date added

--- a/client/my-app/src/app/globals.css
+++ b/client/my-app/src/app/globals.css
@@ -70,3 +70,24 @@ body {
     @apply bg-background text-foreground;
   }
 }
+
+@layer utilities {
+  .custom-scrollbar::-webkit-scrollbar {
+    width: 8px; /* Width of the scrollbar */
+    height: 8px; /* Height of the horizontal scrollbar */
+  }
+
+  .custom-scrollbar::-webkit-scrollbar-thumb {
+    background-color: #2b2b2b; /* Thumb color */
+    border-radius: 4px; /* Rounded corners */
+  }
+
+  .custom-scrollbar::-webkit-scrollbar-thumb:hover {
+    background-color: #2a2a2a; /* Darker color on hover */
+  }
+
+  .custom-scrollbar::-webkit-scrollbar-track {
+    background-color: #000000; /* Track color */
+    border-radius: 4px; /* Rounded corners */
+  }
+}
